# cnn-web-3d-vis

./: .gitignore  README.md
train/: pyproject.toml  run.py  train.py
web/: index.html  package.json  vite.config.js
web/public/model/: model.json
web/src/css/: style.css
web/src/js/: helpers.js  main.js
web/src/js/components/: camera.js  controls.js  renderer.js  scene.js
